--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                 </div>
                 <button id="sendMessageBtn" type="submit"
                         class="w-full px-4 py-2 bg-black text-white border border-dk transition duration-300 hover:bg-[#B22222] hover:text-white hover:shadow-lg">
-                    Send Message
+                    Send Messages
                 </button>
             </form>
 
