--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                 </div>
                 <button id="sendMessageBtn" type="submit"
                         class="w-full px-4 py-2 bg-black text-white border border-dk transition duration-300 hover:bg-[#B22222] hover:text-white hover:shadow-lg">
-                    Send Messages
+                    Send Message
                 </button>
             </form>
         </div>
