--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
                     Contact Info
                 </button>
             </div>
-        </div>
 
         <div class="flex justify-center space-x-6 mt-6">
             <a href="mailto:fardin.iqbal@stonybrook.edu" target="_blank"
@@ -189,6 +188,7 @@
                 <i class="fa fa-github fa-2x"></i>
             </a>
         </div>
+        </div>
 
 
     </div>
@@ -197,7 +197,6 @@
            onclick="location.href='#about'"></i>
     </div>
 
-    </div>
 </section>
 
 <!-- About Section with VANTA.NET Background -->
@@ -547,8 +546,8 @@
         scale: 1.00,
         scaleMobile: 1.00,
         backgroundColor: 0xffffff,
-        color: 0xB22222,
-        color2: 0xff6347,
+        color: 0x000000,
+        color2: 0x000000,
         size: 1.00
     });
 </script>
@@ -570,7 +569,7 @@
         maxDistance: 20.00,
         spacing: 15.00,
         showDots: false,
-        color: 0xB22222,
+        color: 0x000000,
         backgroundColor: 0xffffff
     });
 
@@ -587,7 +586,7 @@
         maxDistance: 18.00,
         spacing: 16.00,
         showDots: false,
-        color: 0xB22222,
+        color: 0x000000,
         backgroundColor: 0xffffff
     });
 
@@ -604,7 +603,7 @@
         maxDistance: 18.00,
         spacing: 16.00,
         showDots: false,
-        color: 0xB22222,
+        color: 0x000000,
         backgroundColor: 0xffffff
     });
 </script>
@@ -629,7 +628,7 @@
         wingSpan: 60.00,
         speedLimit: 1,
         alignment: 1.00,
-        cohesion: 0.5,
+        cohesion: 1.0,
         quantity: 3.0,
         separation: 100.00
     });
